--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+  "react": "^19.1.1",
+  "react-dom": "^19.1.1",
+  "@fortawesome/fontawesome-free": "^6.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
