--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.4.0",
         "react": "^19.1.1",
-        "react-dom": "^19.1.1",
-        "@fortawesome/fontawesome-free": "^6.4.0"
+        "react-colorful": "^5.6.1",
+        "react-dom": "^19.1.1"
     },
     "devDependencies": {
         "@eslint/js": "^9.33.0",
