--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "scripts": {
         "dev": "vite",
         "build": "tsc -b && vite build",
-        "lint": "eslint .",
+        "lint": "eslint . --ext .ts,.tsx --max-warnings=0",
+        "lint:fix": "eslint . --ext .ts,.tsx --fix",
+        "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,css,md}\"",
         "preview": "vite preview"
     },
     "dependencies": {
@@ -18,6 +20,7 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.33.0",
+        "@types/node": "^24.5.2",
         "@types/react": "^19.1.10",
         "@types/react-dom": "^19.1.7",
         "@types/three": "^0.180.0",
@@ -26,6 +29,7 @@
         "eslint-plugin-react-hooks": "^5.2.0",
         "eslint-plugin-react-refresh": "^0.4.20",
         "globals": "^16.3.0",
+        "prettier": "^3.6.2",
         "typescript": "~5.8.3",
         "typescript-eslint": "^8.39.1",
         "vite": "^7.1.2"
