--- a/package.json
+++ b/package.json
@@ -13,23 +13,33 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.4.0",
+        "@radix-ui/react-slot": "^1.2.3",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "lucide-react": "^0.546.0",
         "react": "^19.1.1",
         "react-colorful": "^5.6.1",
         "react-dom": "^19.1.1",
+        "tailwind-merge": "^3.3.1",
         "three": "^0.180.0"
     },
     "devDependencies": {
         "@eslint/js": "^9.33.0",
+        "@shadcn/ui": "^0.0.4",
+        "@tailwindcss/vite": "^4.1.15",
         "@types/node": "^24.5.2",
         "@types/react": "^19.1.10",
         "@types/react-dom": "^19.1.7",
         "@types/three": "^0.180.0",
         "@vitejs/plugin-react": "^5.0.0",
+        "autoprefixer": "^10.4.21",
         "eslint": "^9.33.0",
         "eslint-plugin-react-hooks": "^5.2.0",
         "eslint-plugin-react-refresh": "^0.4.20",
         "globals": "^16.3.0",
+        "postcss": "^8.5.6",
         "prettier": "^3.6.2",
+        "tailwindcss": "^4.1.15",
         "typescript": "~5.8.3",
         "typescript-eslint": "^8.39.1",
         "vite": "^7.1.2"
